Fix : Search functionality and  last qr-code cropping issue fixed

--- a/src/styles/desktop-login-page/desktop-login-page.scss
+++ b/src/styles/desktop-login-page/desktop-login-page.scss
@@ -653,7 +653,7 @@
 @media(min-width:1199px){
   .desktop-protect-page {
     .qr-codes-container {
-      max-height: 46vh;
+      max-height: 42vh;
     }
     .load-more{
       bottom: -35px;
