--- a/src/styles/hamburger-and-searchbar/hamburger-and-searchbar.scss
+++ b/src/styles/hamburger-and-searchbar/hamburger-and-searchbar.scss
@@ -247,7 +247,7 @@
 
 @media screen and (max-width: 440px) {
   .mobile-header {
-    width: 93%;
+    width: 90%;
   }
 }
 @media screen and (max-width: 380px) {
